[package]
name = "warp_petstore"
version = "0.1.0"
authors = ["Hiruna Kethaka Jayamanne <hirunav2@gmail.com>"]
edition = "2018"

[dependencies]
warp = { git = "https://github.com/HiruNya/warp.git", features = ["openapi"], rev = "4afc50c" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }

#warp = { path = "../warp", features = ["openapi"] }

[features]
serve = []
